--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           d="M219.455 89.25L202.13 262.5H77.8805L58.4555 68.775C80.3305 61.775 113.58 57.05 140.005 78.75C165.555 99.75 197.755 95.9 219.455 89.25Z"
           fill="rgb(50, 207, 102" />
       </svg>
-      <p class="drink__number">0</p>
+      <p class="drink__number drink__number--js"></p>
     </div>
-    <button class="drink__button drink__button--1">dodaj szklankę</button>
-    <button class="drink__button drink__button--2">usuń szklankę</button>
+    <button class="drink__button drink__button--1 drink__button--1-js">dodaj szklankę</button>
+    <button class="drink__button drink__button--2 drink__button--2-js">usuń szklankę</button>
   </main>
 
   <script src="js/main.js"></script>
