--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <link rel="apple-touch-icon" sizes="192x192" href="assets/pwa/icons/icon-192x192.png" />
+  <!-- <link rel="apple-touch-icon" sizes="192x192" href="assets/pwa/icons/icon-192x192.png" /> -->
 
-  <link rel="icon" type="image/png" href="assets/pwa/icons/icon-192x192.png" />
+  <link rel="icon" type="image/png" href="assets/pwa/icons/icon-152x152.png" />
   <link rel="stylesheet" href="css/main.css" />
 </head>
 
-
 <body>
-  <main class="drink">
-
+  <section class="drink">
     <h1 class="drink__header">you've drunk today:</h1>
     <div class="drink__glass">
       <svg class="drink__image" width="280" height="280" viewBox="0 0 280 280" fill="none"
@@ -38,9 +36,14 @@
       </svg>
       <p class="drink__number drink__number--js"></p>
     </div>
-    <button class="drink__button drink__button--1 drink__button--1-js">dodaj szklankę</button>
-    <button class="drink__button drink__button--2 drink__button--2-js">usuń szklankę</button>
-  </main>
+    <button class="drink__button drink__button--1 drink__button--1-js">add glass</button>
+    <button class="drink__button drink__button--2 drink__button--2-js">remowe glass</button>
+  </section>
+
+  <section class="history">
+    <h2 class="history__header">See how much water you drink every day:</h2>
+    <ul class="history__list"></ul>
+  </section>
 
   <script src="js/main.js"></script>
 </body>
