--- a/src/content/index.html
+++ b/src/content/index.html
@@ -9,9 +9,12 @@
   <meta name="description" content="this app will tell you how much water you drink every day" />
 
   <meta property="og:title" content="drink water with ula" />
-  <meta property="og:description" content="we will tell you how many glass of water you drink every single day!" />
-  <meta property="og:url" content="" />
-  <meta property="og:image" content="https://maciejkorsan.com/wtf-gulp-starter/assets/img/cover.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Have you ever wondered how many glass of water you drink every single day? I can help you!" />
+  <meta property="og:url" content="https://ulakrawczyk.github.io/drink-water/" />
+  <meta property="og:image" content="https://ulakrawczyk.github.io/drink-water/assets/img/cover.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:heigth" content="628" />
 
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
