--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta property="og:description" content="Have you ever wondered how many glass of water you drink every single day? I can help you!" />
   <meta property="og:url" content="https://ulakrawczyk.github.io/drink-water/" />
   <meta property="og:image" content="https://ulakrawczyk.github.io/drink-water/assets/img/cover.jpg" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:heigth" content="628" />
+  <meta property="og:image:width" content="1200px" />
+  <meta property="og:image:heigth" content="628px" />
 
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
