feat: clear history button removed, must wait till my js will be stronger

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +9,8 @@
   <meta name="description" content="this app will tell you how much water you drink every day" />
   <meta property="og:title" content="drink water with ula" />
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="Have you ever wondered how many glass of water you drink every single day? I can help you!" />
+  <meta property="og:description"
+    content="Have you ever wondered how many glass of water you drink every single day? I can help you!" />
   <meta property="og:url" content="https://ulakrawczyk.github.io/drink-water/" />
   <meta property="og:image" content="https://ulakrawczyk.github.io/drink-water/assets/img/cover.jpg" />
   <meta property="og:image:width" content="1200px" />
@@ -18,6 +20,7 @@
   <link rel="icon" type="image/png" href="assets/pwa/icons/icon-152x152.png" />
   <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
   <section class="drink">
     <h1 class="drink__header">you've drunk today:</h1>
@@ -39,6 +42,7 @@
   <section class="history">
     <h2 class="history__header">See how much water you drink every day:</h2>
     <ul class="history__list"></ul>
+    <!-- <button class="drink__button drink__button--1 drink__button--3 drink__button--3-js">clear history</button> -->
   </section>
   <script src="js/main.js"></script>
 </body>
