feat: clear history button vol.1 clears all localStorage

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -42,7 +42,7 @@
   <section class="history">
     <h2 class="history__header">See how much water you drink every day:</h2>
     <ul class="history__list"></ul>
-    <!-- <button class="drink__button drink__button--1 drink__button--3 drink__button--3-js">clear history</button> -->
+    <button class="drink__button drink__button--1 drink__button--3 drink__button--3-js">clear history</button>
   </section>
   <script src="js/main.js"></script>
 </body>
