--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p class="drink__number drink__number--js"></p>
     </div>
     <button class="drink__button drink__button--1 drink__button--1-js">add glass</button>
-    <button class="drink__button drink__button--2 drink__button--2-js">remowe glass</button>
+    <button class="drink__button drink__button--2 drink__button--2-js">remove glass</button>
   </section>
   <section class="history">
     <h2 class="history__header">See how much water you drink every day:</h2>
